📃 docs: Doc to config.yaml

--- a/examble/config.yaml
+++ b/examble/config.yaml
@@ -1,14 +1,22 @@
 server:
   bind-address: "0.0.0.0:8053"
+# DNS сервер по-умолчанию:  
   dns-forward: "1.1.1.1:53"
+# HTTP сервер имеет только 2 действия: 
+# - "/clearcache" Сброс кэша DNS с удалением правил
+# - "/reload" Перезагрузка конфигруации правил (пример правил лежит config.txt
   http-server: "0.0.0.0:8081"
 
+# Генерация сетей локальных откуда будут выдаваться адреса
+# ВНИМАНИЕ! на ipv6 меньше 116 диапазона слишком много адресов и он может не запуститься вообще
+# При необходимости можно указать несколько диапозонов
 networks:
   ipv4:
     cidr: "10.199.0.0/24"
   ipv6:
-    cidr: "fd00::/117"
+    cidr: "fd00::/117" 
 
+# Действия
 actions:
   PROXY:
     mark: "PROXY"
