--- a/example/config.yaml
+++ b/example/config.yaml
@@ -4,7 +4,7 @@ server:
   dns-forward: "1.1.1.1:53"
 # HTTP сервер имеет только 2 действия: 
 # - "/clearcache" Сброс кэша DNS с удалением правил
-# - "/reload" Перезагрузка конфигруации правил (пример правил лежит config.txt
+# - "/reload" Перезагрузка конфигруации правил (пример правил лежит rules.txt
   http-server: "0.0.0.0:8081"
 
 # Генерация сетей локальных откуда будут выдаваться адреса
