--- a/example/config.yaml
+++ b/example/config.yaml
@@ -9,7 +9,7 @@ server:
 
 # Генерация сетей локальных откуда будут выдаваться адреса
 # ВНИМАНИЕ! на ipv6 меньше 116 диапазона слишком много адресов и он может не запуститься вообще
-# При необходимости можно указать несколько диапозонов
+# При необходимости можно указать несколько диапозонов (см config_2.yaml)
 networks:
   ipv4:
     cidr: "10.199.0.0/24"
